--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -2,6 +2,12 @@
 ---
 @import "{{ site.theme }}";
 
+body {
+    background-color: #121212;
+    color: #f0f0f0;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+}
+
 .page-header {
     padding: 2rem 1rem;
     text-align: center;
