--- a/css/styles.css
+++ b/css/styles.css
@@ -1,7 +1,1 @@
-.avatar {
-    height: 150px;
-    width: 150px;
-    border-radius: 50%;
-    border: 1px solid gray;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
-}
+@import "siderbar.css";
